--- a/css/layout-style.css
+++ b/css/layout-style.css
@@ -1,4 +1,4 @@
-
+<style>
       .header{
         width: 100%;
         height:100px;
@@ -51,3 +51,4 @@ a:link { color: blue; }
  a:active { color: red; }
 
 
+</style>
