--- a/css/layout-style.css
+++ b/css/layout-style.css
@@ -45,7 +45,7 @@
  background-color: gray;
 }
 
-a:link { color: blue; }
+a:link { color: blue; font-weight: bold; }
  a:visited { color: green; }
  a:hover { color: orange; text-decoration: none;}
  a:active { color: red; }
