--- a/css/layout-style.css
+++ b/css/layout-style.css
@@ -41,7 +41,7 @@
       }
       
       body{
-       background-image: url('images/texture.jpeg');
+       background-image: url('../img/texture.jpeg');
  background-color: gray;
 }
 
