--- a/css/solitaire.css
+++ b/css/solitaire.css
@@ -43,7 +43,7 @@
 }
 
 .top {
- background-image: url('../images/.jpg');
+ background-image: url('../images/tendiamonds.png');
  position: absolute;
  top: 40px;
  left: 110px;
