--- a/css/solitaire.css
+++ b/css/solitaire.css
@@ -50,5 +50,10 @@
  z-index: 5;
 }
 
+.gradient {
+ background-image: url('../img/gradient.jpg');
+ background-repeat: repeat-x;
+ background-color: gray;
+}
 
 
