--- a/css/solitaire.css
+++ b/css/solitaire.css
@@ -51,7 +51,7 @@
 }
 
 .gradient {
- background-image: url('../img/gradient.jpg');
+ background-image: url('../images/gradient.jpg');
  background-repeat: repeat-x;
  background-color: gray;
 }
