--- a/css/solitaire.css
+++ b/css/solitaire.css
@@ -13,6 +13,7 @@
 .back {
  background-image: url('../images/card.png');
  position: absolute;
+ padding: 100px 118px;
  top: 40px;
  left: 110px;
  z-index: 1;
@@ -21,6 +22,7 @@
 .fourth {
  background-image: url('../images/kingspades.png');
  position: absolute;
+ padding: 100px 118px;
  top: 60px;
  left: 110px;
  z-index: 2;
@@ -29,6 +31,7 @@
 .middle {
  background-image: url('../images/queenhearts.png');
  position: absolute;
+ padding: 100px 118px;
  top: 80px;
  left: 110px;
  z-index: 3;
@@ -37,6 +40,7 @@
 .second {
  background-image: url('../images/jackclubs.png');
  position: absolute;
+ padding: 100px 118px;
  top: 100px;
  left: 110px;
  z-index: 4;
@@ -45,6 +49,7 @@
 .top {
  background-image: url('../images/tendiamonds.png');
  position: absolute;
+ padding: 100px 118px;
  top: 120px;
  left: 110px;
  z-index: 5;
@@ -53,7 +58,7 @@
 .gradient {
  background-image: url('../images/gradient.jpg');
  background-repeat: repeat-x;
- height: 1000px;
+ background-repeat: repeat-y;
  background-color: gray;
 }
 
